--- a/Backend2/package.json
+++ b/Backend2/package.json
@@ -1,6 +1,7 @@
 {
   "name": "medicare_service",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
